--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -16,6 +16,6 @@
   <title>ダッシュボード</title>
 </head>
 <body>
-  <a th:href="@{/users}">ユーザ一覧</a>
+  <a th:href="@{/frenches}">ユーザ一覧</a>
 </body>
 </html>
