--- a/src/main/resources/templates/french/search.html
+++ b/src/main/resources/templates/french/search.html
@@ -67,7 +67,7 @@
     </tbody>
   </table>
   <div colspan="4">
-      <a th:href="@{/french/new}"><div class="ui right floated small primary labeled icon button"><i class="user icon"></i>新規登録</div></a>
+      <a th:href="@{/frenches/new}"><div class="ui right floated small primary labeled icon button"><i class="user icon"></i>新規登録</div></a>
   </div>
 </div>
 </body>
