--- a/src/main/resources/templates/french/create.html
+++ b/src/main/resources/templates/french/create.html
@@ -11,7 +11,7 @@
   <script th:src="@{/webjars/Semantic-UI/2.1.8/semantic.min.js}"></script>
   <script th:src="@{/resources/lib/jquery.sliphover.min.js}"></script>
 
-  <title>ユーザ新規登録</title>
+  <title>フレンチ新規登録</title>
   <link rel="stylesheet" href="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.css"/>
   <script src="/static/resources/lib/jquery.min.js"></script>
   <script src="/static/resources/lib/Semantic-UI/2.1.8/semantic.min.js"></script>
@@ -22,7 +22,7 @@
     <a th:href="@{/logout}"><div class="ui right floated small red labeled icon button"><i class="sign out icon"></i>ログアウト</div></a>
   </div>
   <h2 class="ui header aligned blue">新規登録</h2>
-  <form class="ui horizontal form" method="post" th:action="@{/users/new}" th:object="${form}">
+  <form class="ui horizontal form" method="post" th:action="@{/frenches/new}" th:object="${form}">
     <div class="field" th:classappend="${#fields.hasErrors('name')}? has-error">
       <label class="ui blue header"><i class="user icon"></i>名前</label>
       <div class="ui input" th:classappend="${#fields.hasErrors('name')}? 'error'">
@@ -44,20 +44,12 @@
       </div>
       <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}">エラーメッセージ</p>
     </div>
-    <div class="field" th:classappend="${#fields.hasErrors('age')}? has-error">
-      <label class="ui blue header"><i class="birthday icon"></i>年齢</label>
-      <div class="ui input" th:classappend="${#fields.hasErrors('age')}? 'error'">
-        <input type="text" th:field="*{age}" name="" placeholder="年齢" />
+    <div class="field" th:classappend="${#fields.hasErrors('address')}? has-error">
+      <label class="ui blue header"><i class="coffee icon"></i>住所</label>
+      <div class="ui input" th:classappend="${#fields.hasErrors('address')}? 'error'">
+        <input type="text" th:field="*{address}" name="" placeholder="住所" />
       </div>
-      <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}">エラーメッセージ</p>
-    </div>
-    <div class="field" th:classappend="${#fields.hasErrors('gender')}? has-error">
-      <label class="ui blue header"><i class="male icon"></i>性別</label>
-      <select class="ui search dropdown" th:field="*{gender}">
-        <option value="">性別を選択</option>
-        <option th:each="gender : ${genders}" th:text="#{|user.field.gender.${gender}|}" th:value="${gender}"></option>
-      </select>
-      <p th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">エラーメッセージ</p>
+      <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}">エラーメッセージ</p>
     </div>
     <button class="ui primary button" type="submit">保存</button>
     <a type="button" th:href="@{/users}" class="ui button" tabindex="0">キャンセル</a>
